# cmake-tutorial

./: CMakeLists.txt  README.md  build.sh
src/: app.cpp
tutorial/: english.md  serbian.md
